--- a/app/scenes/CodeStep/scenes/ProgressBar/styles.css
+++ b/app/scenes/CodeStep/scenes/ProgressBar/styles.css
@@ -1,12 +1,13 @@
+@value darkerBackground from "styles/colors.css";
 
 .progressBar {
   flex: 1 1 auto;
   overflow: hidden;
   max-width: 10%;
-  background: #b8b8b8;
 
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  margin: 10px;
 }
