--- a/app/components/Visualiser/styles.css
+++ b/app/components/Visualiser/styles.css
@@ -1,5 +1,5 @@
 .visualiser {
-  font-family: 'Source Code Pro', monospace;
+  font-family: 'Roboto Mono', monospace;
   font-size: .8em;
   white-space: pre;
   overflow: auto;
