--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@
   background: #c0c0c0;
   padding: 0.8vh 0.8vw;
   color: #1a1a1a;
+  font-family: "Roboto", monospace;
 }
 .styles__progressBar___3KQ2A {
   flex: 1 1 auto;
