--- a/app/scenes/CodeStep/styles.css
+++ b/app/scenes/CodeStep/styles.css
@@ -1,4 +1,4 @@
-@value dark, lighterBackground from "styles/colors.css";
+@value dark, lighterBackground, mediumBackground from "styles/colors.css";
 
 * {
   box-sizing: border-box;
@@ -15,13 +15,22 @@
 
 .main {
   width: 75vw;
+  overflow: hidden;
 
   display: flex;
+  position: relative;
   flex-direction: column;
 }
 
-.codeContainer {
-  flex: 4 1 auto;
+.overlay {
+  position: absolute;
 
   display: flex;
+  justify-content: center;
+  align-items: flex-end;;
+
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
 }
