--- a/style.css
+++ b/style.css
@@ -137,3 +137,27 @@
   flex: 1 1 fit;
   cursor: pointer;
 }
+
+.styles__container___3X6Ac {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.styles__content___2IjVW {
+  height: 80vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.styles__controls___3cC8K {
+  display: flex;
+  flex-direction: column;
+  height: 20vh;
+}
