--- a/app/scenes/CodeStep/scenes/CodeSelect/styles.css
+++ b/app/scenes/CodeStep/scenes/CodeSelect/styles.css
@@ -1,15 +1,17 @@
-@value mediumBackground from "styles/colors.css";
+@value lighterBackground, dark from "styles/colors.css";
 
 .container {
-  flex: 1 1 auto;
-  z-index: 9999999999998;
-
-  min-height: 20vh;
-  background: mediumBackground;
-  margin: 10px;
-  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.button {
-  z-index: 9999999999999;
+.lesson {
+  background: lighterBackground;
+  box-shadow: 2px 2px 2px dark;
+  font-family: "Roboto Mono", monospace;
+  margin: 10px;
 }
