--- a/app/scenes/CodeStep/scenes/MenuLayer/scenes/SelectionBar/styles.css
+++ b/app/scenes/CodeStep/scenes/MenuLayer/scenes/SelectionBar/styles.css
@@ -1,6 +1,11 @@
 
-.progressBar {
+.selectionBar {
   overflow: hidden;
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  bottom: 0%;
+
 
   display: flex;
   flex-direction: column;
