--- a/app/scenes/CodeStep/styles.css
+++ b/app/scenes/CodeStep/styles.css
@@ -14,6 +14,13 @@
   perspective: 1000px;
 }
 
+.trackBar {
+  flex: 1 1 auto;
+  max-width: 10%;
+
+  display: flex;
+}
+
 .main {
   width: 75vw;
   overflow: hidden;
