--- a/style.css
+++ b/style.css
@@ -13,6 +13,13 @@
   perspective: 1000px;
 }
 
+.styles__trackBar___2rktj {
+  flex: 1 1 auto;
+  max-width: 10%;
+
+  display: flex;
+}
+
 .styles__main___kaf0B {
   width: 75vw;
   overflow: hidden;
@@ -79,16 +86,12 @@
   flex: 1 1 fit;
   cursor: pointer;
 }
-.styles__menu___2uCq- {
+.styles__menu___1GlTw {
   position: absolute;
   display: flex;
-  /*z-index: 9999999;*/
-
-  /*transform: translateZ(-50vw);*/
 
   /*background: lighterBackground;*/
   /*box-shadow: 2px 2px 2px dark;*/
-
 
   width: 60%;
   left: 20%;
@@ -96,7 +99,7 @@
   height: 80%;
   bottom: 10%;
 }
-.styles__container___3nK9v {
+.styles__container___2ilIH {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -105,19 +108,40 @@
   align-items: center;
 }
 
-.styles__lesson___37AIG {
+.styles__lesson___EfkX2 {
   background: #e0e0e0;
   font-family: "Roboto", monospace;
   margin: 10px;
   padding: 5px;
 }
 
-.styles__selectedLesson___2Zag- {
+.styles__selectedLesson___2yBLt {
   background: #c0c0c0;
   font-family: "Roboto", monospace;
   margin: 10px;
   color: #fafafa;
   padding: 5px;
+}
+
+.styles__selectionBar___PMSbt {
+  overflow: hidden;
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  bottom: 0%;
+
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin: 10px;
+}
+.styles__stepIconStyles___3su9R {
+  background: #c0c0c0;
+  padding: 0.8vh 0.8vw;
+  color: #1a1a1a;
+  font-family: "Roboto", monospace;
 }
 .styles__code___PjxLM {
   flex: 1 1 auto;
@@ -161,10 +185,9 @@
 .styles__visualiser___3Yj1X .styles__visualiserRow___3qGoJ {
   display: inline-block;
 }
+
 .styles__progressBar___1cKB_ {
-  flex: 1 1 auto;
   overflow: hidden;
-  max-width: 10%;
 
   display: flex;
   flex-direction: column;
